--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 rcore filter=lfs diff=lfs merge=lfs -text
 kernel.img filter=lfs diff=lfs merge=lfs -text
+riscv64-user.img filter=lfs diff=lfs merge=lfs -text
